--- a/requirements.txt
+++ b/requirements.txt
@@ -43,9 +43,12 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
 six==1.15.0
-SQLAlchemy==1.4.9
+SQLAlchemy~=1.4.12
 toml==0.10.2
 visitor==0.1.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
+
+pip~=21.1
+setuptools~=56.0.0
