--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,12 @@ Jinja2==2.11.3
 Mako==1.1.4
 markdown2==2.4.0
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.4.12
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
-
-pip~=21.1
-setuptools~=56.0.0
